[project]
name = "langchain-pydantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.7",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
]
